--- a/Week 4/Team/styles.css
+++ b/Week 4/Team/styles.css
@@ -16,7 +16,7 @@ body {
     height: 20vw;
     max-height: 200px;
     border: 1px black solid;
-    font-size: 20vw;
+    font-size: 10vw;
 }
 
 .col:first-of-type .cell {
@@ -36,8 +36,10 @@ body {
 }
 
 #warning {
-    font-size: 10vw;
+    font-size: 5vw;
     color: red;
+    margin-top: 0px;
+    text-align: center;
 }
 
 #player-display {
